# cllm-functions

./: .gitignore  Argcfile.sh  CMakeLists.txt  OPENCOG-TRANSFORM.md  README.md  build-opencog.sh  caichat-config.cmake.in  example.scm  iteration-1.md  iteration-2.md  iteration-3.md  test-caichat.scm  test-opencog.sh  test-structure.sh
docs/: ggml-integration-spec.md  ggml-usage-guide.md  iteration-3-part2-summary.md  iteration-3-plan.md  iteration-3-tracker.md  roadmap.md
opencog/: CMakeLists.txt  README.md
opencog/caichat/: ChatCompletion.cc  ChatCompletion.h  LLMClient.cc  LLMClient.h  SchemeBindings.cc
scm/opencog/caichat/: atomspace.scm  config.scm  ggml.scm  init.scm  rag.scm  repl.scm
tests/: CMakeLists.txt  test_ggml_example.sh  test_ggml_integration.cpp
